--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@headlessui/react": "^1.7.15",
     "@mui/icons-material": "latest",
     "@mui/material": "latest",
+    "axios": "^1.4.0",
     "mdb-react-ui-kit": "^6.1.0",
     "next": "latest",
     "prop-types": "latest",
