added cart. overall workflow completed. email sending functionality added

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@heroicons/react": "^2.0.18",
     "@mui/icons-material": "latest",
     "@mui/material": "latest",
+    "@szhsin/react-menu": "^4.0.2",
     "axios": "^1.4.0",
     "mdb-react-ui-kit": "^6.1.0",
     "next": "latest",
